# openarm_isaac_lab

./: .gitmodules  README.md  dataflow-dummy-isaac.yaml  dataflow-vr-isaac.yaml
constraints/: isaaclab-dora.txt
dataflows/: dataflow-dummy-isaac.yaml  dataflow-vr-isaac.yaml
nodes/dora-openarm-isaac/: README.md  pyproject.toml
nodes/dora-openarm-isaac/src/dora_openarm_isaac/: __init__.py  launcher.py  main.py
scripts/data_collection/: dora_cli.sh  init_submodules.sh  pip.sh  run_dummy.sh  run_vr.sh
scripts/teleoperation/: verify_data_collection_env.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/assets/: openarm_bimanual.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/bimanual/data_collection/: data_collection_env_cfg.py  joint_utils.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/bimanual/data_collection/config/: __init__.py  teleop_env_cfg.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/bimanual/data_collection/mdp/: __init__.py  observations.py
