# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-openarm-isaac"
version = "0.1.0"
authors = [{ name = "Enactic, Inc." }]
description = "Isaac Sim / Isaac Lab simulation node for OpenArm bimanual data collection"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dora-rs==0.5.0",
    "dora-rs-cli==0.5.0",
    "numpy",
    "opencv-python",
    "pyarrow",
]

[project.scripts]
dora-openarm-isaac = "dora_openarm_isaac:cli_main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
